# zbox-android

./: .gitignore  .travis.yml  Dockerfile  README.md  build-docker.sh  build-zboxfs.sh  build.gradle  settings.gradle
fs/: build.gradle
fs/src/androidTest/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
zbox/: Cargo.toml  build.gradle
zbox-binding/: Cargo.toml
zbox-binding/.cargo/: config
zbox-binding/src/: lib.rs
zbox-library/: build.gradle
zbox-library/src/main/: AndroidManifest.xml
zbox-library/src/main/java/io/zbox/: DirEntry.java  File.java  Metadata.java  OpenOptions.java  Repo.java  RepoInfo.java  RepoOpener.java  RustObject.java  Version.java  VersionReader.java  ZboxException.java
zbox/src/: env.rs  file.rs  lib.rs  open_options.rs  path.rs  repo.rs  repo_opener.rs  version_reader.rs
zbox/src/main/: AndroidManifest.xml
zboxfs/: Cargo.toml  bintray.gradle  build.gradle
zboxfs/src/: lib.rs
zboxfs/src/androidTest/java/io/zbox/zboxfs/test/suite/: DirTest.java  FileTest.java  PathTest.java  PersistTest.java  RepoTest.java  TestSuite.java
zboxfs/src/main/: AndroidManifest.xml
zboxfs/src/main/java/io/zbox/zboxfs/: Cipher.java  DirEntry.java  Env.java  File.java  FileInputStream.java  FileType.java  MemLimit.java  Metadata.java  OpenOptions.java  OpsLimit.java  Path.java  Repo.java  RepoInfo.java  RepoOpener.java  RustObject.java  SeekFrom.java  Version.java  VersionReader.java  ZboxException.java  package-info.java
zboxfs/src/main/java/io/zbox/zboxfs/transport/: HttpTransport.java  Response.java
(+51 files in other folders)
