[package]
name = "zboxfs"
description = "ZboxFS Android binding"
version = "0.1.0"
authors = ["Zbox.io"]
categories = ["android"]
readme = "README.md"
repository = "https://github.com/zboxfs/zbox-android"
license = "Apache-2.0"

[lib]
crate-type=["cdylib"]

[profile.release]
lto = true

[dependencies]
jni = "0.13.1"
log = "0.4.8"
android_logger = "0.8.5"
#zbox = { version = "0.8.6", features = ["storage-file", "storage-zbox-android"] }
#zbox = { path = "../../zbox", features = ["storage-file", "storage-zbox-android"] }
zbox = { git = "https://github.com/zboxfs/zbox", features = ["storage-file", "storage-zbox-android"] }
